# kazmath

./: .gitignore  AUTHORS.md  Android.mk  CMakeLists.txt  ChangeLog  Doxyfile  README  README.md  kazmath.config  kazmath.files  kazmath.includes  kazmath.recipe
build-linux/: kazmath.cbp  kazmath.depend  kazmath.layout
build-windows/: kazmath.cbp  kazmath.layout
build-windows/kazmath/: ReadMe.txt  kazmath.ncb  kazmath.sln  kazmath.vcproj
cmake_modules/: FindKAZMATH.cmake  KAZMATHConfig.cmake
debian/: changelog  control  rules
docs/html/: aabb_8c-source.html  aabb_8c.html  aabb_8h-source.html  aabb_8h.html  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_0x61.html  globals_0x63.html  globals_0x64.html  globals_0x65.html  globals_0x67.html  globals_0x69.html  globals_0x6b.html  globals_0x6c.html  globals_0x6d.html  globals_0x70.html  globals_0x71.html  globals_0x72.html  globals_0x73.html  globals_0x74.html  globals_0x76.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_func_0x61.html  globals_func_0x64.html  globals_func_0x67.html  globals_func_0x6c.html  globals_func_0x6d.html  globals_func_0x70.html  globals_func_0x71.html  globals_func_0x72.html  globals_func_0x73.html  globals_func_0x76.html  globals_type.html  (+53 more)
docs/latex/: aabb_8c.tex  aabb_8h.tex  annotated.tex  doxygen.sty  files.tex  kazmath_8h.tex  mat3_8c.tex  mat3_8h.tex  mat4_8c.tex  mat4_8h.tex  mat4stack_8c.tex  mat4stack_8h.tex  matrix_8c.tex  matrix_8h.tex  plane_8c.tex  plane_8h.tex  quaternion_8c.tex  quaternion_8h.tex  refman.tex  structkm__mat4__stack.tex  structkm_a_a_b_b.tex  structkm_mat3.tex  structkm_mat4.tex  structkm_plane.tex  structkm_quaternion.tex  structkm_vec2.tex  structkm_vec3.tex  structkm_vec4.tex  utility_8c.tex  utility_8h.tex  vec2_8c.tex  vec2_8h.tex  vec3_8c.tex  vec3_8h.tex  vec4_8c.tex  vec4_8h.tex
include/kazmath/: ray2.h  utility.h
java/: CMakeLists.txt
java/jni/: kazmath.c
java/kazmath/: jkazmath.java
java/sample/: test.java
kazmath/: CMakeLists.txt  ChangeLog  aabb.c  aabb.h  aabb2.c  aabb2.h  aabb3.c  aabb3.h  kazmath.h  mat3.c  mat3.h  mat4.c  mat4.h  plane.c  plane.h  quaternion.c  quaternion.h  ray2.c  ray2.h  ray3.c  ray3.h  utility.c  utility.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
kazmath-0.1-win32-bin/include/: aabb.h  plane.h  quaternion.h
kazmath-0.1-win32-bin/lib/: kazmath.lib
kazmath/GL/: mat4stack.c  mat4stack.h  matrix.c  matrix.h
kazmath/debian/: changelog  control  copyright  rules
kazmath/docs/html/: aabb_8c-source.html  annotated.html  globals_0x65.html  globals_0x67.html  globals_0x6b.html  globals_0x70.html  globals_defs.html  globals_func_0x61.html  globals_func_0x67.html  globals_func_0x72.html  globals_func_0x73.html  globals_vars.html  graph_legend.html  kazmath_8h-source.html  mat3_8c-source.html  mat3_8c.html  mat3_8h-source.html  mat3_8h.html  mat4_8h.html  mat4stack_8c.html  matrix_8c-source.html  matrix_8c.html  plane_8c-source.html  quaternion_8c-source.html  quaternion_8c.html  quaternion_8h-source.html  quaternion_8h.html  structkm_a_a_b_b.html  structkm_mat3.html  structkm_plane.html  structtagkm_mat3.html  utility_8c.html  vec2_8h-source.html  vec2_8h.html  vec3_8c-source.html  vec3_8h.html  vec4_8c.html
kazmath/docs/latex/: aabb_8h.tex  annotated.tex  doxygen.sty  kazmath_8h.tex  mat3_8c.tex  mat3_8h.tex  mat4_8c.tex  mat4stack_8h.tex  structkm_quaternion.tex  structtagkm_mat3.tex  utility_8c.tex
kazmath/include/kazmath/: kazmath.h  mat4.h
kazmath/src/: CMakeLists.txt  aabb.c  aabb.h  mat3.c  mat3.h  mat4.c  mat4.h  plane.c  plane.h  quaternion.c  quaternion.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c
kazmath/src/GL/: mat4stack.c  matrix.c
kazmath/test-apps/CUnitTest/: CUnitTest.cbp  CUnitTest.depend  CUnitTest.layout  main.c  testVec2.c
kazmath/test-apps/PerspectiveMatrix/: PerspectiveMatrix.layout
kazmath/test-apps/PerspectiveMatrix/src/: perspective_test.cpp
kazmath/test-apps/PerspectiveMatrix/src/basecode/: window.cpp
kazmath/test-apps/PerspectiveMatrix/src/basecode/GLee/: GLee.h
kazmath/tests/: CMakeLists.txt  test_mat3.cpp  test_mat4.cpp
kazmathxx/: CMakeLists.txt  aabb2.h  boundvec2.h  mat3.h  quad.h  vec2.h  vec3.h  vec4.h
kazmathxx/src/: CMakeLists.txt  mat3.h  mat4.h  vec2.h  vec3.h  vec4.h
kazmathxxv2/kazmathxx/: mat4.h
kazmodel/: CMakeLists.txt
kazmodel/codeblocks/: kazmodel.cbp  kazmodel.depend  kazmodel.layout  kazmodel_md3_tests  kazmodel_model_tests  main.c  valgrind.xml
kazmodel/codeblocks/models/: ReadMe-Sonic.txt
kazmodel/codeblocks/models/scripts/: aquasonic.bot  bionicsonic.bot  mechablue.bot  mechared.bot  shadow.bot  sonic.bot  sonic.shader  supersonic.bot
kazmodel/src/kazmodel/: md3_model.c  md3_model.h  model.c  model.h
kazmodel/tests/: md3_model_tests.cpp  model_tests.cpp
lua/: CMakeLists.txt  README.md  lkazmath.c  test.lua
lua/unit_test/: mat.lua  ray.lua  vec.lua
src/: CMakeLists.txt  aabb.c  aabb.h  kazmath.h  kazmathxx.h  mat3.c  mat3.h  mat4.c  mat4.h  plane.c  plane.h  quaternion.c  quaternion.h  ray2.c  utility.c  utility.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
src/GL/: mat4stack.c  mat4stack.h  matrix.c  matrix.h
src/gl_utils/: CMakeLists.txt  c_stack.c  c_stack.h  matrix_stack.c  matrix_stack.h  stack_test.c
test-apps/CUnitTest/: CUnitTest.cbp  CUnitTest.depend  CUnitTest.layout  main.c  testMat3.c  testMat4.c  testMatrixStack.c  testVec3.c  testVec4.c
test-apps/CUnitTest/kazmath_mat_stack_test/: main.cpp
test-apps/PerspectiveMatrix/: PerspectiveMatrix.cbp  PerspectiveMatrix.depend  PerspectiveMatrix.layout
test-apps/PerspectiveMatrix/src/: main.cpp  perspective_test.cpp  perspective_test.h
tests/: CMakeLists.txt  main.cpp  test_aabb.cpp  test_aabb.h  test_mat3.cpp  test_mat3.h  test_mat4.cpp  test_mat4.h  test_plane.cpp  test_plane.h  test_quaternion.cpp  test_quaternion.h  test_ray2.cpp  test_ray2.h  test_ray3.cpp  test_ray3.h  test_vec2.cpp  test_vec2.h  test_vec3.cpp  test_vec3.h
tests/kaztest/: kaztest.h
(+49 files in other folders)
