
#ADD_LIBRARY(Kazmath STATIC ${KAZMATH_SRCS})
#INSTALL(TARGETS Kazmath ARCHIVE DESTINATION lib)

ADD_LIBRARY(kazmath SHARED ${KAZMATH_SOURCES})
SET_TARGET_PROPERTIES(kazmath
                      PROPERTIES
                      VERSION 0.0.1
                      SOVERSION 1)
INSTALL(TARGETS kazmath DESTINATION lib)

#ADD_LIBRARY(KazmathGL STATIC ${GL_UTILS_SRCS})
#INSTALL(TARGETS KazmathGL ARCHIVE DESTINATION lib)

INSTALL(FILES ${KAZMATH_HEADERS} DESTINATION include/kazmath)
INSTALL(FILES ${GL_UTILS_HEADERS} DESTINATION include/kazmath/GL)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../cmake_modules/FindKAZMATH.cmake DESTINATION /usr/share/cmake/Modules)
