INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/include )

IF(NOT UNITTEST_FOUND)
    PKG_CHECK_MODULES(UNITTEST unittest++)
ENDIF(NOT UNITTEST_FOUND)

IF(UNITTEST_FOUND)
LINK_LIBRARIES(libunittest++.a)

FILE(GLOB_RECURSE TEST_FILES *.cpp)

LINK_LIBRARIES(kazmath)

ADD_EXECUTABLE(kazmath_tests ${TEST_FILES})
ADD_TEST(kazmath_suite kazmath_tests)
ENDIF(UNITTEST_FOUND)
