INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/include )

IF(NOT UNITTEST_FOUND)
    PKG_CHECK_MODULES(UNITTEST unittest++)
    IF(NOT UNITTEST_FOUND)
        PKG_CHECK_MODULES(UNITTEST unittest-cpp)
    ENDIF(NOT UNITTEST_FOUND)
ENDIF(NOT UNITTEST_FOUND)

IF(UNITTEST_FOUND)
LINK_LIBRARIES(${UNITTEST_LIBRARIES} pthread)
MESSAGE(${UNITTEST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${UNITTEST_INCLUDE_DIRS})

FILE(GLOB_RECURSE TEST_FILES *.cpp)

LINK_LIBRARIES(kazmath)

ADD_EXECUTABLE(kazmath_tests ${TEST_FILES})
ADD_TEST(kazmath_suite kazmath_tests)
ENDIF(UNITTEST_FOUND)
